--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,14 +17,14 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.490.0",
+    "@aws-sdk/s3-request-presigner": "^3.490.0",
     "@prisma/client": "^5.0.0",
     "@reunion/shared": "*",
     "bcrypt": "^5.1.0",
-    "cloudflare": "^2.9.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^7.0.0",
@@ -32,9 +32,9 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
+    "next": "16.1.1",
     "node-cron": "^3.0.2",
-    "nodemailer": "^6.9.4",
+    "nodemailer": "^7.0.12",
     "prisma": "^5.0.0",
     "redis": "^4.6.7",
     "twilio": "^4.14.0",
@@ -58,10 +58,10 @@
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.45.0",
-    "jest": "^29.6.1",
+    "eslint": "^8.57.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
-    "supertest": "^6.3.3",
+    "supertest": "^7.1.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
